# AnomalyTransformer

./: .coderabbit.yaml  README.md  main.py  pyproject.toml  solver.py
model/: attn.py
