[tool.poetry]
name = "anomalytransformer"
version = "0.1.0"
description = ""
authors = ["Junhand <jun1493907@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
pillow = "^10.2.0"
torch = "^2.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
